# prompt-library

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
prompts/analysis/: competitor_analysis.yaml  feasibility_analysis.yaml  gap_analysis.yaml  risk_analysis.yaml  root_cause_analysis.yaml  sentiment_analysis.yaml  stakeholder_analysis.yaml  swot_analysis.yaml  trend_analysis.yaml
prompts/code_generation/: api_endpoint.yaml  code_review.yaml  documentation.yaml  python_function.yaml  refactor.yaml  regex_generator.yaml  sql_query.yaml  unit_test.yaml
prompts/content_creation/: blog_post.yaml  email_template.yaml  faq_generator.yaml  newsletter.yaml  presentation_outline.yaml  press_release.yaml  product_description.yaml  social_media.yaml
prompts/customer_service/: complaint_handler.yaml  escalation_detector.yaml  faq_matcher.yaml  feedback_categorizer.yaml  response_generator.yaml  satisfaction_analyzer.yaml  ticket_classification.yaml  tone_adjuster.yaml
prompts/data_extraction/: action_item_extraction.yaml  contact_extraction.yaml  date_extraction.yaml  entity_extraction.yaml  key_value_extraction.yaml  metric_extraction.yaml  requirement_extraction.yaml  table_extraction.yaml
prompts/summarization/: article_summary.yaml  bullet_points.yaml  changelog_summary.yaml  comparison_summary.yaml  email_digest.yaml  executive_summary.yaml  meeting_notes.yaml  technical_summary.yaml  tldr.yaml
src/: __init__.py  app.py  prompt_manager.py  prompt_tester.py
tests/: test_prompt_manager.py  test_prompt_tester.py
